Remove some dead code; fix some warnings