@@ -54,7 +54,7 @@ public class LoginLogoutHelper {
                 })
                 .filter(Objects::nonNull)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
 
         List<AuthorizationPluginInfo> passwordBasedAuthenticationPlugins = securityAuthConfigs
@@ -68,7 +68,7 @@ public class LoginLogoutHelper {
                 })
                 .filter(Objects::nonNull)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         ImmutableMap.Builder<String, Object> metaBuilder = ImmutableMap.<String, Object>builder()
                 .put("hasWebBasedPlugins", !webBasedAuthenticationPlugins.isEmpty())
